refactor(front): :recycle: update api calls

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="manifest" href="./public/assets/manifest.json">
-    <link rel="icon" href="./public/assets/favicon.ico">
+    <link rel="manifest" href="./assets/manifest.json">
+    <link rel="icon" href="./assets/favicon.ico">
     <title>Web 4 Lab</title>
   </head>
   <body>
